--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 .container {
   width: 1158px;
   padding-left: 15px;
-  /* padding-right: 15px; */
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid red;
@@ -132,6 +132,8 @@ ul {
   background: #2e2f42;
   padding-top: 191px;
   padding-bottom: 185px;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -220,7 +222,7 @@ btn:focus {
 }
 
 .benefits-description {
-  letter-spacing: 0.02em;
+  letter-spacing: 0.01em;
   color: var(--primary-font-color);
   line-height: 24px;
 }
@@ -366,6 +368,10 @@ btn:focus {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-description {
