--- a/css/styles.css
+++ b/css/styles.css
@@ -307,10 +307,16 @@ btn:focus {
 /*================== FOOTER ================== */
 .footer {
   background: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-description {
   color: #e7e9fc;
   max-width: 264px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #e7e9fc;
 }
 
 .footer-logo {
@@ -329,11 +335,6 @@ btn:focus {
   color: #f4f4fd;
 }
 
-.footer-container {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
 /*================== PORTFOLIO ================== */
 
 .portfolio-content {
@@ -347,6 +348,7 @@ btn:focus {
   margin-bottom: 72px;
   display: flex;
   justify-content: center;
+  gap: 24px;
 }
 
 .portfolio-title {
